--- a/server/views/home/index.html
+++ b/server/views/home/index.html
@@ -2,12 +2,41 @@
 
 <div class="jumbotron text-center">
     <div class="container">
-        <h1>VEO</h1>
-        <p class="lead">Salon de vente digitale</p>
+        <h1>Bubblhub</h1>
+        <p class="lead">digital meeting</p>
         <p>
             <a href="/auth/register" class="btn btn-primary btn-lg">Inscription</a>
-            <a href="/demo" class="btn btn-default btn-lg">Demo</a>
+            <a href="/try" class="btn btn-default btn-lg">Try it !</a>
         </p>
+    </div>
+</div>
+
+<div class="container">
+    <div class="row">
+        <div class="col-md-4 text-center">
+            <div class="panel panel-default">
+                <div class="panel-heading">Video stream</div>
+                <div class="panel-body">
+                    <i class="fa fa-video-camera fa-4x"></i>
+                </div>
+            </div>
+        </div>
+        <div class="col-md-4 text-center">
+            <div class="panel panel-default">
+                <div class="panel-heading">File transfert</div>
+                <div class="panel-body">
+                    <i class="fa fa-upload fa-4x"></i>
+                </div>
+            </div>
+        </div>
+        <div class="col-md-4 text-center">
+            <div class="panel panel-default">
+                <div class="panel-heading">Facebook connect</div>
+                <div class="panel-body">
+                    <i class="fa fa-facebook-official fa-4x"></i>
+                </div>
+            </div>
+        </div>
     </div>
 </div>
 
