--- a/client/components/home/controllers/home.html
+++ b/client/components/home/controllers/home.html
@@ -2,10 +2,10 @@
 
     <div class="jumbotron text-center">
         <div class="container">
-            <h1>VEO</h1>
-            <p class="lead">Salon de vente digitale</p>
+            <h1>Bubblhub</h1>
+            <p class="lead">Digital meeting</p>
             <p>
-                <a ng-hide="vm.isDemo" href="#/{{vm.username}}" class="btn btn-primary btn-lg">Votre salon</a>
+                <a ng-hide="vm.isDemo" href="#/{{vm.username}}" class="btn btn-primary btn-lg">Votre room</a>
                 <button ng-click="vm.createRoom()" class="btn btn-default btn-lg">Salon temporaire</button>
             </p>
         </div>
