--- a/server/views/layout.html
+++ b/server/views/layout.html
@@ -2,10 +2,11 @@
 <html ng-app="app">
 
 <head>
-	<title>VEO</title>
+	<title>Bubblhub</title>
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<link href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css" rel="stylesheet" media="screen">
 	<link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.4.0/css/font-awesome.min.css" rel="stylesheet">
+	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/3.5.1/animate.min.css">
     <link rel="stylesheet" href="https://npmcdn.com/angular-toastr/dist/angular-toastr.css" />
 
 	<!--[if lt IE 9]>
@@ -25,7 +26,7 @@
 					<span class="icon-bar"></span>
 				</button>
 				<a class="navbar-brand" href="/">
-					<i class="fa fa-home"></i> VEO
+					<i class="fa fa-home"></i> Bubblhub
 				</a>
 			</div>
 
