--- a/server/views/home/index.html
+++ b/server/views/home/index.html
@@ -2,7 +2,7 @@
 
 <div class="jumbotron text-center">
     <div class="container">
-        <h1>Bubblhub</h1>
+        <img src="./images/logo.png" width="50%" alt="">
         <p class="lead">digital meeting</p>
         <p>
             <a href="/auth/register" class="btn btn-primary btn-lg">Inscription</a>
