--- a/server/views/layout.html
+++ b/server/views/layout.html
@@ -2,70 +2,66 @@
 <html ng-app="app">
 
 <head>
-	<title>Bubblhub</title>
-	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<link href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css" rel="stylesheet" media="screen">
-	<link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.4.0/css/font-awesome.min.css" rel="stylesheet">
-	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/3.5.1/animate.min.css">
+    <title>Bubblhub</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css" rel="stylesheet" media="screen">
+    <link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.4.0/css/font-awesome.min.css" rel="stylesheet">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/3.5.1/animate.min.css">
     <link rel="stylesheet" href="https://npmcdn.com/angular-toastr/dist/angular-toastr.css" />
 
-	<!--[if lt IE 9]>
+    <!--[if lt IE 9]>
 		<script src="https://oss.maxcdn.com/libs/html5shiv/3.7.0/html5shiv.js"></script>
 	<![endif]-->
 </head>
 
 <body>
 
-	<nav class="navbar navbar-default" role="navigation">
-		<div class=" container">
-			<div class="navbar-header">
-				<button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1">
-					<span class="sr-only">Toggle navigation</span>
-					<span class="icon-bar"></span>
-					<span class="icon-bar"></span>
-					<span class="icon-bar"></span>
-				</button>
-				<a class="navbar-brand" href="/">
-					<i class="fa fa-home"></i> Bubblhub
-				</a>
-			</div>
+    <nav class="navbar navbar-default" role="navigation">
+        <div class="container">
+            <div class="navbar-header">
+                <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1">
+                    <span class="sr-only">Toggle navigation</span>
+                    <span class="icon-bar"></span>
+                    <span class="icon-bar"></span>
+                    <span class="icon-bar"></span>
+                </button>
+                <a class="navbar-brand" href="/">
+                    <i class="fa fa-home"></i> Bubblhub
+                </a>
+            </div>
 
-			<div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
+            <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
 
-				<ul class="nav navbar-nav">
+                <ul class="nav navbar-nav">
                     <li><a href="/room"><i class="fa fa-video-camera"></i> Room</a></li>
-					<li><a href="http://veo.strikingly.com/"><i class="fa fa-info-circle"></i> About</a></li>
-				</ul>
+                    <li><a href="http://veo.strikingly.com/"><i class="fa fa-info-circle"></i> About</a></li>
+                </ul>
 
-				<ul class="nav navbar-nav navbar-right">
-					{% if user %}
-					<li><a href="/auth/settings"><span class="glyphicon glyphicon-user"></span> {{user.username}}</a></li>
-					<li><a href="/auth/logout"><span class="glyphicon glyphicon-log-out"></span> logout</a></li>
-					{% else %}
-					<li><a href="/auth/login"><span class="glyphicon glyphicon-log-in"></span> login</a></li>
-					<li>
-						<a href="/auth/register"> <span class="glyphicon glyphicon-saved"></span> register</a>
-					</li>
-					{% endif %}
-				</ul>
+                <ul class="nav navbar-nav navbar-right">
+                    {% if user %}
+                    <li><a href="/auth/settings"><span class="glyphicon glyphicon-user"></span> {{user.username}}</a></li>
+                    <li><a href="/auth/logout"><span class="glyphicon glyphicon-log-out"></span> logout</a></li>
+                    {% else %}
+                    <li><a href="/auth/login"><span class="glyphicon glyphicon-log-in"></span> login</a></li>
+                    <li>
+                        <a href="/auth/register"> <span class="glyphicon glyphicon-saved"></span> register</a>
+                    </li>
+                    {% endif %}
+                </ul>
 
-			</div>
-		</div>
-	</nav>
+            </div>
+        </div>
+    </nav>
 
-	<div class="container">
-		{% if flash != undefined %}
-		<div class="alert alert-warning alert-dismissible" role="alert">
-			<button type="button" class="close" data-dismiss="alert" aria-label="Close"><span aria-hidden="true">&times;</span></button>
-			{{flash}}
-		</div>
-		{% endif %} 
-		
-		{% block body %}{% endblock %}
-	</div>
-	
-	<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
-	<script type="text/javascript" src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/js/bootstrap.min.js"></script>
+    {% if flash != undefined %}
+    <div class="alert alert-warning alert-dismissible" role="alert">
+        <button type="button" class="close" data-dismiss="alert" aria-label="Close"><span aria-hidden="true">&times;</span></button>
+        {{flash}}
+    </div>
+    {% endif %} {% block body %}{% endblock %}F
+
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
+    <script type="text/javascript" src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/js/bootstrap.min.js"></script>
 </body>
 
 </html>
