--- a/server/views/home/index.html
+++ b/server/views/home/index.html
@@ -19,7 +19,7 @@
     <div class="container">
         <img src="./images/logo.png" width="50%" alt="">
         <p>
-            <a href="/auth/register" class="btn btn-primary btn-lg">Inscription</a>
+            <a href="/auth/register" class="btn btn-default btn-lg">Inscription</a>
             <a href="/try" class="btn btn-default btn-lg">Try it !</a>
         </p>
         <br><br>
