--- a/server/views/home/index.html
+++ b/server/views/home/index.html
@@ -17,7 +17,7 @@
 
 <div class="text-center jumbo">
     <div class="container">
-        <img src="./images/logo.png" width="50%" alt="">
+        <img src="./images/logo2.png" width="50%" alt="">
         <p>
             <a href="/auth/register" class="btn btn-default btn-lg">Inscription</a>
             <a href="/try" class="btn btn-default btn-lg">Try it !</a>
