--- a/server/views/auth/login.html
+++ b/server/views/auth/login.html
@@ -4,7 +4,7 @@
     <div class="page-header">
         <h1>Login</h1>
     </div>
-    
+
     <div class="row">
         <div class="col-md-6">
             <form action="/auth/signin" method="post">
@@ -21,8 +21,10 @@
         </div>
 
         <div class="col-md-6">
-            <label for="">Social</label><br>
-            <a class="btn btn-primary" href="/auth/facebook">Facebook login</a>
+            <div class="text-center">
+                <label for="">Social</label><br>
+                <a class="btn btn-primary" href="/auth/facebook">Facebook login</a>
+            </div>
         </div>
     </div>
 
