UI & facebook connect

--- a/server/views/auth/login.html
+++ b/server/views/auth/login.html
@@ -23,7 +23,7 @@
         <div class="col-md-6">
             <div class="text-center">
                 <label for="">Social</label><br>
-                <a class="btn btn-primary" href="/auth/facebook">Facebook login</a>
+                <a class="btn btn-primary" href="/auth/facebook">Facebook connect</a>
             </div>
         </div>
     </div>
