--- a/server/views/auth/register.html
+++ b/server/views/auth/register.html
@@ -1,21 +1,36 @@
 {% extends '../layout.html' %} {% block body %}
 
 <div class="container">
-	<form action="/auth/signup" method="post">
-		<div class="form-group">
-			<label for="username">Username</label>
-			<input type="text" class="form-control" id="username" placeholder="Username" name="username">
-		</div>
-		<div class="form-group">
-			<label for="password">Password</label>
-			<input type="password" class="form-control" id="password" placeholder="Password" name="password">
-		</div>
-		<div class="form-group">
-			<label for="email">Email</label>
-			<input type="email" class="form-control" id="email" placeholder="email" name="email">
-		</div>
-		<button type="submit" class="btn btn-default">Register</button>
-	</form>
+    <div class="page-header">
+        <h1>Register</h1>
+    </div>
+    
+    <div class="row">
+        <div class="col-md-6">
+            <form action="/auth/signup" method="post">
+                <div class="form-group">
+                    <label for="username">Username</label>
+                    <input type="text" class="form-control" id="username" placeholder="Username" name="username">
+                </div>
+                <div class="form-group">
+                    <label for="password">Password</label>
+                    <input type="password" class="form-control" id="password" placeholder="Password" name="password">
+                </div>
+                <div class="form-group">
+                    <label for="email">Email</label>
+                    <input type="email" class="form-control" id="email" placeholder="email" name="email">
+                </div>
+                <button type="submit" class="btn btn-default">Register</button>
+            </form>
+        </div>
+        <div class="col-md-6">
+            <div class="text-center">
+                <label for="">Social</label>
+                <br>
+                <a class="btn btn-primary" href="/auth/facebook">Facebook connect</a>
+            </div>
+        </div>
+    </div>
 </div>
 
 {% endblock %}
